--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "colors": "^1.1.2",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.0",
     "ip": "^1.1.5",
+    "node-sass": "^4.5.3",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router-dom": "^4.1.1",
     "readline": "^1.3.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
     "webpack-express-middleware": "^1.2.1"
