--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "colors": "^1.1.2",
     "css-loader": "^0.28.4",
+    "eslint": "^4.2.0",
     "express": "^4.15.3",
     "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.0",
