--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^4.2.0",
     "express": "^4.15.3",
     "file-loader": "^0.11.1",
+    "firebase": "^4.1.3",
     "image-webpack-loader": "^3.3.0",
     "ip": "^1.1.5",
     "node-sass": "^4.5.3",
