--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "firebase": "^4.1.3",
     "image-webpack-loader": "^3.3.0",
     "ip": "^1.1.5",
+    "mongodb": "^2.2.33",
     "node-sass": "^4.5.3",
+    "pouchdb": "^6.3.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-router-dom": "^4.1.1",
