--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Main Page for Keystock",
   "main": "webpack.config.js",
   "dependencies": {
+    "JSONStream": "^1.3.1",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -22,6 +23,7 @@
     "image-webpack-loader": "^3.3.0",
     "ip": "^1.1.5",
     "mongodb": "^2.2.33",
+    "mongojs": "^2.4.1",
     "node-sass": "^4.5.3",
     "pouchdb": "^6.3.4",
     "react": "^0.14.6",
@@ -34,7 +36,9 @@
     "webpack-dev-server": "^1.14.1",
     "webpack-express-middleware": "^1.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "json-loader": "^0.5.7"
+  },
   "scripts": {
     "dev": "webpack-dev-server -d --progress --colors",
     "start": "webpack-dev-server --content-base src --inline --hot",
