--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^4.1.1",
     "readline": "^1.3.0",
     "sass-loader": "^6.0.6",
+    "socket.io": "^2.0.4",
     "style-loader": "^0.18.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
