--- a/package.json
+++ b/package.json
@@ -5,33 +5,35 @@
   "main": "webpack.config.js",
   "dependencies": {
     "JSONStream": "^1.3.1",
-    "babel-core": "^6.17.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.3.13",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "colors": "^1.1.2",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.2.0",
-    "express": "^4.15.3",
-    "file-loader": "^0.11.1",
-    "firebase": "^4.1.3",
-    "image-webpack-loader": "^3.3.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.11.0",
+    "express": "^4.16.2",
+    "file-loader": "^0.11.2",
+    "firebase": "^4.6.2",
+    "image-webpack-loader": "^3.4.2",
     "ip": "^1.1.5",
     "mongodb": "^2.2.33",
     "mongojs": "^2.4.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
     "pouchdb": "^6.3.4",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.2.2",
     "readline": "^1.3.0",
+    "rpi-gpio": "^0.9.1",
     "sass-loader": "^6.0.6",
     "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "style-loader": "^0.18.2",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
