--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "classnames": "^2.2.5",
     "colors": "^1.1.2",
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
@@ -24,7 +25,7 @@
     "node-sass": "^4.5.3",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.2.2",
     "readline": "^1.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
