--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
   "editor.tabSize": 2,
-  "editor.detectIndentation": false,
-  "files.autoSave": "afterDelay"
-}  
+  "editor.detectIndentation": true,
+  "files.autoSave": "afterDelay",
+  "editor.fontSize": 14,
+  "editor.fontFamily": "monaco",
+  "editor.fontLigatures": true
+} 
